Resumed tour part ; Set up main webpage ; Fixed issues with presenter class ; Added more features to DOMElement

--- a/assets/scss/_utils.scss
+++ b/assets/scss/_utils.scss
@@ -29,3 +29,21 @@
   -o-transition : $property $duration $easing $delay;
   transition : $property $duration $easing $delay;
 }
+
+@mixin placeholder-color($color) {
+	input::-webkit-input-placeholder {
+		color: $color;
+	}
+
+	input::-moz-placeholder {
+		color: $color;
+	}
+
+	input:-moz-placeholder {
+		color: $color;
+	}
+
+	input:-ms-placeholder {
+		color: $color;
+	}
+}
