--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,7 +1,11 @@
 $fontFolder: '../fonts/';
 
+$modernSans: 'modern_sans_regular';
+$montserrat: 'montserrat_regular';
+$ptSans: 'pt_sans_regular';
+
 @font-face {
-  font-family: 'Modern Sans';
+  font-family: $modernSans;
   src: url($fontFolder + 'MODERNE SANS.eot'); /* IE9 Compat Modes */
   src: url($fontFolder + 'MODERNE SANS.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url($fontFolder + 'MODERNE SANS.woff') format('woff'), /* Modern Browsers */
@@ -9,11 +13,11 @@ $fontFolder: '../fonts/';
        url($fontFolder + 'MODERNE SANS.svg#bcb65e5f871894c6b949303cede8fd32') format('svg'); /* Legacy iOS */
        
   font-style:   normal;
-  font-weight:  400;
+  font-weight:  normal;
 }
 
 @font-face {
-  font-family: 'Montserrat';
+  font-family: $montserrat;
   src: url($fontFolder + 'Montserrat-Regular.eot'); /* IE9 Compat Modes */
   src: url($fontFolder + 'Montserrat-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url($fontFolder + 'Montserrat-Regular.woff') format('woff'), /* Modern Browsers */
@@ -21,5 +25,17 @@ $fontFolder: '../fonts/';
        url($fontFolder + 'Montserrat-Regular.svg#95d90f2cd2aa64bdfee0e9f34c516e71') format('svg'); /* Legacy iOS */
        
   font-style:   normal;
-  font-weight:  400;
+  font-weight:  normal;
+}
+
+@font-face {
+  font-family: $ptSans;
+  src: url($fontFolder + 'PTS55F.eot'); /* IE9 Compat Modes */
+  src: url($fontFolder + 'PTS55F.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url($fontFolder + 'PTS55F.woff') format('woff'), /* Modern Browsers */
+       url($fontFolder + 'PTS55F.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url($fontFolder + 'PTS55F.svg#f39585f1b656e5f9297b79e526233403') format('svg'); /* Legacy iOS */
+       
+  font-style:   normal;
+  font-weight:  normal;
 }
