--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,27 +1,17 @@
 @import "common";
 
-.random-background {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 100%;
-	z-index: 1;
-	background: url($imgFolder + 'patchwork_bg.jpg');
-	background-position: center;
-}
-
-.panel-wrapper, .bookmark-wrapper, .search-wrapper {
-	z-index: 2;
-}
+$black: #333333;
+$blue: #0c7cbb;
 
 .panel-wrapper {
 	position: absolute;
 	top: 0px;
 	left: 0px;
+
 	width: 25%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.3);
+
+	background-color: $black;
 
 	.icon-wrapper, .tag-list {
 		display: inline-block;
@@ -29,13 +19,14 @@
 
 	.icon-wrapper {
 		width: 100%;
-		border-bottom: 3px solid rgba(0, 0, 0, 0.5);
 		padding: 10px 0px;
+
+		border-bottom: 3px solid rgba(0, 0, 0, 0.5);
 	}
 
 	.tag-list {
 		width: 100%;
-		margin: 30px 0px 0px 0px;
+		margin: 30px 0 0 0;
 	}
 }
 
@@ -60,7 +51,7 @@
 
 	li {
 		font: {
-			family: 'Montserrat';
+			family: $ptSans;
 			size: 1em;
 		}
 
@@ -75,18 +66,22 @@
 	position: absolute;
 	top: 0px;
 	left: 25%;
+
 	width: 75%;
 	height: 90%;
-	background-color: rgba(255, 255, 255, 0.3);
+
+	background-color: white;
 }
 
 .search-wrapper {
 	position: absolute;
 	top: 90%;
 	left: 25%;
+
 	width: 75%;
 	height: 10%;
-	background-color : rgba(255, 255, 255, 0.5);
+
+	background-color : $blue;
 
 	img, form {
 		display: inline-block;
@@ -101,23 +96,23 @@
 		height: 100%;
 		width: $appWidth * 0.75 - 95px;
 
-		@include placeholder-color(white);
+		@include placeholder-color(transparentize(white, 0.5));
 	}
 }
 
 .search-wrapper form input {
-	outline: none;
 	width: 100%;
 	height: 100%;
 	padding: 5px 10px;
 	@include box-sizing(border-box);
-	border : none;
-	background: none;
 
 	font: {
-		family: 'Montserrat';
+		family: $ptSans;
 		size: 1em;
 	}
 
+	outline: none;
+	border : none;
+	background: none;
 	color: white;
 }
