--- a/app/ui/assets/scss/main.scss
+++ b/app/ui/assets/scss/main.scss
@@ -2,6 +2,7 @@
 
 $black: #333333;
 $blue: #0c7cbb;
+$lightBlue : #22A8E8;
 
 .main-view-wrapper {
 	position: absolute;
@@ -80,6 +81,58 @@ $blue: #0c7cbb;
 	height: 90%;
 
 	background-color: white;
+
+	ul {
+		margin : 0;
+		padding : 0;
+		width : 100%;
+		height: 100%;
+
+		list-style-type : none;
+		overflow : auto;
+		
+		li {
+			vertical-align : middle;
+
+			display : inline-block;
+			padding: 10px 15px;
+			width: 33.3%;
+			height: 33.3%;
+			@include box-sizing(border-box);
+
+			text-align : center;
+
+			cursor: pointer;
+			@include transition(background-color, 0.5s, ease);
+
+			&:hover {
+				background-color : #eee;
+			}
+		}
+	}
+}
+
+.bookmark-wrapper ul li {
+	h3 {
+		margin: 0;
+
+		font: {
+			size: 1em;
+			family : $ptSans;
+		}
+
+		color: $black;		
+	}
+
+	p {
+		font: {
+			size: 0.8em;
+			family : $ptSans;
+		}
+		text-align: justify;
+
+		color: #ccc;
+	}
 }
 
 .search-wrapper {
@@ -134,11 +187,39 @@ $blue: #0c7cbb;
 	width: 100%;
 	height: 100%;
 
+	background-color : $black;
+
+	ul {
+		margin: 0;
+		padding: 0;
+		width: 100%;
+		height: 100%;
+
+		list-style-type : none;
+
+		li {
+			padding: 0;
+			display : inline-block;
+			height: 100%;
+
+			vertical-align : top;
+
+			&.column {
+				width: 32px;
+				padding: 0 20px;
+
+				text-align : center;
+			}
+		}
+	}
+
 	form {
-		margin: 15px auto;
+		margin: 15px 0;
 		padding: 0 25px;
-		width: 400px;
+		width: $appWidth - 72 * 2;
+		
 		text-align: center;
+		@include box-sizing(border-box);
 
 		p {
 			margin: 1em 0;
@@ -146,23 +227,77 @@ $blue: #0c7cbb;
 	}
 }
 
-.bookmark-form-wrapper form input {
+.bookmark-form-wrapper .cancel-trigger {
+	opacity : 0.5;
+	cursor : pointer;
+
+	@include transition(opacity, 0.5s, ease);
+
+	&:hover {
+		opacity : 1;
+	}
+}
+
+@mixin flat-button($primary, $secondary) {
+	min-width : 200px;
+	min-height : 30px;
+	padding: 10px 15px;
+
+	font : {
+		family : $montserrat;
+		size: 1em;
+	}
+
+	color : white;
+	background-color : $primary;
+	border : 1px solid $secondary;
+	cursor : pointer;
+	outline : none;
+	text-align : center;
+
+	&:active {
+		background-color : $secondary;
+	}
+}
+
+.bookmark-form-wrapper .save-button {
+	@include flat-button(#7EB530, #71a02e);
+}
+
+.bookmark-form-wrapper .delete-button {
+	@include flat-button(#DD381D, #B52C17);
+}
+
+.bookmark-form-wrapper form input,
+.bookmark-form-wrapper form textarea {
 	width: 300px;
-	height: 20px;
 	padding: 5px 10px;
 
+	font : {
+		family : $ptSans;
+		size: 1em;
+	}
+
 	outline: none;
+	border : 2px solid #555;
+	background-color : $black;
+	color : white;
+	@include transition(border-color, 0.5s, ease);
+
+	&:focus {
+		border-color : $lightBlue;
+	}
+}
+
+.bookmark-form-wrapper form input {
+	height: 20px;
 }
 
 .bookmark-form-wrapper form textarea {
-	width: 300px;
-	height: 50px;
-	padding: 5px 10px;
-
-	outline: none;
+	height: 80px;
 }
 
-.bookmark-form-wrapper form .tags {
+.bookmark-form-wrapper form .tag-list {
 	margin: 0;
 	padding: 0;
 
@@ -170,10 +305,36 @@ $blue: #0c7cbb;
 
 	li {
 		vertical-align: middle;
-		padding: 0;
-		margin: 0;
-
+		padding: 5px;
+		margin: 5px 10px;
 		display: inline-block;
+
+		background-color : #ccc;
+		@include transition(opacity, 0.5s, ease);
+
+		&:hover {
+			opacity : 0.5;
+		}
+
+		p, img {
+			display: inline-block;
+			vertical-align : middle;
+		}
+
+		p {
+			margin : 0;
+			font : {
+				family : $montserrat;
+				size : 0.8em;
+			} 
+			color : $black;
+			cursor : default;
+		}
+
+		img {
+			margin-left : 4px;
+			cursor : pointer;
+		}
 	}
 }
 
