--- a/app/ui/assets/scss/intro.scss
+++ b/app/ui/assets/scss/intro.scss
@@ -1,42 +1,19 @@
 @import "common";
 
-.patchwork {
-	top: 0px;
-	left: 0px;
-	position: absolute;
-
-	width: 100%;
-	height: 100%;
-
+body {
 	background: url($imgFolder + 'patchwork_bg.jpg');
 	background-position: center;
+}
 
-	polygon {
-		fill: transparent;
-		stroke-width: 1px;
-		stroke: rgba(44, 46, 81, 0.1);
-	}
+.intro-strap, .hexagon {
+	position: absolute;
 }
 
 .intro-strap {
-	position: absolute;
+	z-index : 2;
+}
 
-	h1, 
-	img {
-		vertical-align: middle;
-
-		display: inline-block;
-	}
-
-	h1 {
-		margin: 10px 0px 0px 10px;
-
-		font: {
-			family: $modernSans;
-			size: 3em;
-		}
-		
-		color: white;
-		text-transform: uppercase;
-	}
+.hexagon {
+	opacity : 0;
+	z-index : 1;
 }
