--- a/app/ui/assets/scss/main.scss
+++ b/app/ui/assets/scss/main.scss
@@ -28,11 +28,11 @@ $green : #7EB530;
 
 	background-color: $black;
 
-	.icon-wrapper, .tag-list {
-		display: inline-block;
-	}
-
 	.icon-wrapper {
+		position : absolute;
+		top : 0;
+		left : 0;
+
 		width: 100%;
 		padding: 10px 0px;
 
@@ -40,8 +40,12 @@ $green : #7EB530;
 	}
 
 	.tag-list {
+		position : absolute;
+		left : 0;
+
 		width: 100%;
-		margin: 30px 0 0 0;
+
+		overflow : auto;
 	}
 }
 
@@ -68,7 +72,7 @@ $green : #7EB530;
 .panel-wrapper .tag-list .tags {
 	list-style-type: none;
 	margin: 0;
-	padding: 0;
+	padding: 0 0 15px 0;
 
 	li {
 		margin: 0;
@@ -186,6 +190,10 @@ $green : #7EB530;
 		text-align: justify;
 
 		color: #ccc;
+	}
+
+	img {
+		width : 16px;
 	}
 }
 
@@ -384,7 +392,7 @@ $green : #7EB530;
 	padding: 10px 15px;
 
 	font : {
-		family : $montserrat;
+		family : $ptSans;
 		size: 1em;
 	}
 
@@ -515,19 +523,27 @@ form .delete-button, form .cancel-button {
 .overlay .menu-pannel {
 	ul {
 		list-style-type: none;
-		margin : 0;
+		margin : 5px 10px;
 		padding : 0;
 
 		li {
-			padding : 10px 20px;
+			margin : 10px;
+			padding : 2px 5px 2px 10px;
 
 			font : {
-				family : $montserrat;
+				family : $ptSans;
 				size : 1em;
 			}
 
 			color : white;
 			cursor : pointer;
+			border-left : 5px solid rgba(255, 255, 255, 0);
+
+			@include transition(border-color, 0.5s, ease);
+
+			&:hover {
+				border-color : $blue;
+			}
 		}
 	}
 }
@@ -561,6 +577,42 @@ form .delete-button, form .cancel-button {
 
 		button {
 			margin : 0;
+		}
+	}
+}
+
+.drag-area {
+	position : absolute;
+	top : -100%;
+	left : 0;
+
+	width : 100%;
+	height : 100%;
+
+	display : none;
+	z-index : 0;
+	background-color : $blue;
+
+	h1, h2 {
+		text-align : center;
+		color : white;
+	}
+
+	h1 {
+		margin : 175px 20px 20px 20px;
+
+		font : {
+			family : $montserrat;
+			size : 2.5em;
+		}
+	}
+
+	h2 {
+		margin : 10px 20px;
+
+		font : {
+			family : $montserrat;
+			size : 1.5em;
 		}
 	}
 }
