--- a/app/ui/assets/scss/_common.scss
+++ b/app/ui/assets/scss/_common.scss
@@ -4,7 +4,9 @@
 
 $imgFolder : '../img/';
 $appWidth : 800px;
-$appHeight: 500px;
+$appHeight: 528px;
+$headerHeight : 27px;
+$blockHeight : $appHeight - $headerHeight;
 
 body {
 	position: absolute;
@@ -22,6 +24,8 @@ body {
 		font-weight: 400;
 		font-style: normal;
 	}
+
+	-webkit-user-select: none;
 }
 
 a {
@@ -34,5 +38,88 @@ a {
 
 	&:visited {
 		color: inherit;
+	}
+}
+
+.header {
+	position : absolute;
+	top : 0;
+	left : 0;
+
+	width : 100%;
+	height : 25px;
+
+	background-color : #eee;
+	border-bottom : 2px solid #ccc;
+	z-index : 2;
+	cursor : pointer;
+
+	-webkit-app-region: drag;
+
+	ul {
+		margin : 2.5px 20px;
+		padding : 0;
+
+		list-style-type: none;
+
+		li {
+			margin : 0;
+			padding : 0 5px 0 0;
+
+			display : inline-block;
+
+			img {
+				opacity : 1;
+
+				@include transition(opacity, 0.5s, ease);
+
+				&:hover {
+					opacity : 0.8;
+				}
+			}
+		}
+	}
+}
+
+.body {
+	position : absolute;
+	top : $headerHeight;
+	left : 0;
+
+	width : 100%;
+	height : $blockHeight;
+
+	z-index : 1;
+}
+
+.error-message {
+	position : absolute;
+	top : 10px;
+	right : 30px;
+
+	max-width : 300px;
+
+	display : none;
+	z-index : 0;
+	@include border-radius(10px);
+
+	p {
+		margin : 10px 15px;
+
+		font : {
+			family : $ptSans;
+			size : 0.9em;
+		}
+
+		color : white;
+		opacity : 0;
+	}
+
+	&.error {
+		background-color : #DD381D;
+	}
+
+	&.warning {
+		background-color : #EB6841;
 	}
 }
