--- a/app/ui/assets/scss/main.scss
+++ b/app/ui/assets/scss/main.scss
@@ -9,8 +9,8 @@ $green : #7EB530;
 
 .main-view-wrapper {
 	position: absolute;
-	top: 0px;
-	left: 0px;
+	top: 0;
+	left: 0;
 
 	width: 100%;
 	height: 100%;
@@ -122,7 +122,7 @@ $green : #7EB530;
 			@include transition(opacity, 0.5s, ease);
 
 			&:hover {
-				opacity : 0.8;
+				opacity : 0.7;
 			}
 		}
 	}
