--- a/app/ui/assets/scss/intro.scss
+++ b/app/ui/assets/scss/intro.scss
@@ -5,15 +5,44 @@
 	background-position: center;
 }
 
-.intro-strap, .hexagon {
+.strap-wrapper, .hexagon {
 	position: absolute;
-}
-
-.intro-strap {
-	z-index : 2;
 }
 
 .hexagon {
 	opacity : 0;
 	z-index : 1;
 }
+
+.strap-wrapper {
+	text-align : center;
+}
+
+.intro-strap {
+	z-index : 2;
+}
+
+.update-notification {
+	width : 300px;
+
+	opacity : 0;
+
+	.gift, h1 {
+		margin : 0;
+	}
+
+	.gift {
+		float : left;
+		margin-right : 10px;
+	}
+
+	h1 {
+		font : {
+			family : $ptSans;
+			size : 1.3em;
+		}
+
+		color : white;
+	}	
+}
+
