Fixed issues before first release

--- a/app/ui/assets/scss/_common.scss
+++ b/app/ui/assets/scss/_common.scss
@@ -71,6 +71,8 @@ a {
 			img {
 				opacity : 1;
 
+				-webkit-app-region: no-drag;
+
 				@include transition(opacity, 0.5s, ease);
 
 				&:hover {
