Fixed issues with favicons

--- a/app/ui/assets/scss/main.scss
+++ b/app/ui/assets/scss/main.scss
@@ -337,7 +337,7 @@ $green : #7EB530;
 	background-color : $black;
 
 	.bookmark-icon {
-		width : 16;
+		max-width : 32px;
 
 		cursor : pointer;
 	}
