--- a/app/ui/assets/scss/intro.scss
+++ b/app/ui/assets/scss/intro.scss
@@ -1,7 +1,7 @@
 @import "common";
 
 .body {
-	background: url($imgFolder + 'patchwork_bg.jpg');
+	background: url($img-folder + 'patchwork_bg.jpg');
 	background-position: center;
 }
 
